Docker refactoring (#1439)
* Removed BlobKey

* Removed interfaces with a single implementation

* RqParams refactoring

* RqParams refactoring

* Layer refactoring

* stage is changed to future

* stage is changed to future

* Removed interfaces with a single implementation

* Pagination

* removed RepoName and Tag

* removed UploadEntity

* removed Scope interface

* removed unuseful actions

* removed unuseful actions

* removed unuseful actions

* blobs refactoring

* blobs refactoring

* blobs refactoring

* blobs refactoring

* pagination apply

* pagination apply

* Routing refactoring

* Routing refactoring