@@ -6,14 +6,12 @@ package com.artipie.docker.misc;
 
 import com.artipie.asto.Content;
 import com.artipie.docker.Catalog;
-import com.artipie.docker.RepoName;
 
 import javax.json.Json;
 import javax.json.JsonString;
 import java.io.ByteArrayInputStream;
 import java.util.List;
 import java.util.concurrent.CompletionStage;
-import java.util.stream.Collectors;
 
 /**
  * Parsed {@link Catalog} that is capable of extracting repository names list
@@ -27,8 +25,6 @@ public final class ParsedCatalog implements Catalog {
     private final Catalog origin;
 
     /**
-     * Ctor.
-     *
      * @param origin Origin catalog.
      */
     public ParsedCatalog(final Catalog origin) {
@@ -45,14 +41,15 @@ public final class ParsedCatalog implements Catalog {
      *
      * @return Repository names list.
      */
-    public CompletionStage<List<RepoName>> repos() {
+    public CompletionStage<List<String>> repos() {
         return this.origin.json().asBytesFuture().thenApply(
             bytes -> Json.createReader(new ByteArrayInputStream(bytes)).readObject()
-        ).thenApply(root -> root.getJsonArray("repositories")).thenApply(
-            repos -> repos.getValuesAs(JsonString.class).stream()
+            ).thenApply(root -> root.getJsonArray("repositories"))
+            .thenApply(
+                repos -> repos.getValuesAs(JsonString.class).stream()
                 .map(JsonString::getString)
-                .map(RepoName.Valid::new)
-                .collect(Collectors.toList())
+                .map(ImageRepositoryName::validate)
+                .toList()
         );
     }
 }
